AC_INIT([chronogogo],[m4_esyscmd(sh tools/get-version.sh)])

AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([foreign])
AM_MAINTAINER_MODE

AC_CONFIG_HEADER([config.h])

BT_PROG_XCODE
AC_PROG_CC([clang gcc c99 cc])

LT_INIT

AC_PROG_CC_C99
AC_SYS_LARGEFILE
AC_CHECK_LIB([m],[cos])
BT_REQUIRE_LIBJSONDATA

SDL_VERSION=2.0.0
AM_PATH_SDL2(
  $SDL_VERSION, 
  [], 
  [AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])]
)

CFLAGS="$CFLAGS $SDL_CFLAGS"
LIBS="$LIBS $SDL_LIBS"

AM_PATH_OPENGL(
  [], 
  [AC_MSG_ERROR([*** OpenGL not found!])]
)

CFLAGS="$CFLAGS $OPENGL_CFLAGS"
LIBS="$LIBS $OPENGL_LIBS"

BT_PROG_CC_WARN

AC_CONFIG_FILES([
Makefile
m4/Makefile
t/Makefile
])

AC_OUTPUT
